bindings/rust/libmem-sys/src/bindings.rs

extern "C" {
    #[doc = " The function scans a specified memory address range for a specific data\n pattern in a given process and returns the address where the data is\n found.\n\n @param process The process whose memory will be scanned.\n @param data The data to be scanned for in memory.\n @param datasize The size of the data array. It indicates the number of\n bytes that need to match consecutively in order to consider it a match.\n @param address The starting memory address where the scanning operation\n will begin. The function will scan a range of memory starting from this\n address to find the data.\n @param scansize The size of the memory region to scan starting from the\n specified `address`. It determines the range within which the function will\n search for a match with the provided `data` array.\n\n @return The function returns the memory address where a match for the\n provided data was found. If no match is found, it returns\n `LM_ADDRESS_BAD`."]
    pub fn LM_DataScanEx(
        process: *const lm_process_t,
        data: lm_bytearray_t,
        datasize: lm_size_t,
        address: lm_address_t,
        scansize: lm_size_t,
    ) -> lm_address_t;
}
extern "C" {
    #[doc = " The function searches for a specific pattern in memory based on a given\n mask.\n\n @param pattern The pattern to be searched for in memory.\n @param mask The pattern mask used for scanning memory. It is used to\n specify which bytes in the pattern should be matched against the memory\n content. The mask can contain characters such as '?' which act as\n wildcards, allowing any byte to be matched. You can also use 'x' to have\n an exact match.\n @param address The starting memory address where the scanning operation\n will begin. The function will scan the memory starting from this address\n to find the pattern match.\n @param scansize The size of the memory region to scan starting from the\n specified `address`. It determines the range within which the function\n will search for the specified pattern based on the provided `pattern` and\n `mask`.\n\n @return The function returns the memory address where a match for the\n given pattern and mask is found within the specified scan size starting\n from the provided address. If no match is found or if an error occurs,\n the function returns `LM_ADDRESS_BAD`."]
    pub fn LM_PatternScan(
        pattern: lm_bytearray_t,
        mask: lm_string_t,
        address: lm_address_t,
        scansize: lm_size_t,
    ) -> lm_address_t;
}
extern "C" {
    #[doc = " The function searches for a specific pattern in memory in a given process based on a mask.\n\n @param process The process whose memory will be scanned.\n @param pattern The pattern to be searched for in memory.\n @param mask The pattern mask used for scanning memory. It is used to specify which bytes in the\n pattern should be matched against the memory content. The mask can contain characters such as\n '?' which act as wildcards, allowing any byte to be matched. You can also use 'x' to have an exact\n match.\n @param address The starting memory address where the scanning operation will begin. The function\n will scan the memory starting from this address to find the pattern match.\n @param scansize The size of the memory region to scan starting from the specified `address`. It\n determines the range within which the function will search for the specified pattern based on the\n provided `pattern` and `mask`.\n\n @return The function returns the memory address where a match for the given pattern and mask is\n found within the specified scan size starting from the provided address. If no match is found or\n if an error occurs, the function returns `LM_ADDRESS_BAD`."]
    pub fn LM_PatternScanEx(
        process: *const lm_process_t,
        pattern: lm_bytearray_t,
        mask: lm_string_t,
        address: lm_address_t,
        scansize: lm_size_t,
    ) -> lm_address_t;
}
extern "C" {
    #[doc = " The function searches for a specific signature pattern in memory starting from a given address\n within a specified scan size.\n\n @param signature The signature to be scanned for in memory. It is used to identify a specific\n pattern of bytes in memory. You can use `??` to match against any byte, or the byte's hexadecimal\n value. Example: `\"DE AD BE EF ?? ?? 13 37\"`.\n @param address The starting memory address where the signature scanning will begin. The function\n will scan the memory starting from this address to find the pattern match.\n @param scansize The size of the memory region to scan starting from the `address` parameter. It\n specifies the number of bytes to search for the signature pattern within the memory region.\n\n @return The function retuns either the address of the pattern match found in the specified memory range\n or `LM_ADDRESS_BAD` if no match is found (or an error occurs)."]
    pub fn LM_SigScan(
        signature: lm_string_t,
        address: lm_address_t,
        scansize: lm_size_t,
    ) -> lm_address_t;
}
extern "C" {
    #[doc = " The function searches for a specific signature pattern in memory from a given process starting\n from a specific address within a specified scan size.\n\n @param process The process whose memory will be scanned.\n @param signature The signature to be scanned for in memory. It is used to identify a specific\n pattern of bytes in memory. You can use `??` to match against any byte, or the byte's hexadecimal\n value. Example: `\"DE AD BE EF ?? ?? 13 37\"`.\n @param address The starting memory address where the signature scanning will begin. The function\n will scan the memory starting from this address to find the pattern match.\n @param scansize The size of the memory region to scan starting from the `address` parameter. It\n specifies the number of bytes to search for the signature pattern within the memory region.\n\n @return The function retuns either the address of the pattern match found in the specified memory range\n or `LM_ADDRESS_BAD` if no match is found (or an error occurs)."]
    pub fn LM_SigScanEx(
        process: *const lm_process_t,
        signature: lm_string_t,
        address: lm_address_t,
        scansize: lm_size_t,
    ) -> lm_address_t;
}
extern "C" {
    #[doc = " The function returns the current architecture.\n\n @return The function returns the architecture of the system. It can be one of:\n - `LM_ARCH_X86` for 32-bit x86.\n - `LM_ARCH_AMD64` for 64-bit x86.\n - Others (check the enum for `lm_arch_t`)"]
    pub fn LM_GetArchitecture() -> lm_arch_t;
}
extern "C" {
    #[doc = " The function assembles a single instruction into machine code.\n\n @param code The instruction to be assembled.\n Example: `\"mov eax, ebx\"`.\n @param instruction_out The assembled instruction is populated into this parameter.\n\n @return The function returns `LM_TRUE` if it succeeds in assembling the instruction, and\n populates the `instruction_out` parameter with the assembled instruction.\n If the instruction could not be assembled successfully, then the function returns `LM_FALSE`."]
    pub fn LM_Assemble(code: lm_string_t, instruction_out: *mut lm_inst_t) -> lm_bool_t;
}
extern "C" {
    #[doc = " The function assembles instructions into machine code.\n\n @param code The instructions to be assembled.\n Example: `\"mov eax, ebx ; jmp eax\"`.\n @param arch The architecture to be assembled.\n @param bits The bitness of the architecture to be assembled.\n It can be `32` or `64`.\n @param runtime_address The runtime address to resolve\n the addressing (for example, relative jumps will be resolved using this address).\n @param payload_out A pointer to the buffer that will receive the assembled instructions.\n The buffer should be freed with `LM_FreePayload` after use.\n\n @return On success, it returns the size of the assembled instructions, in bytes.\n On failure, it returns `0`."]
    pub fn LM_AssembleEx(
        code: lm_string_t,
        arch: lm_arch_t,
        bits: lm_size_t,
        runtime_address: lm_address_t,
        payload_out: *mut *mut lm_byte_t,
    ) -> lm_size_t;
}
extern "C" {
    #[doc = " The function deallocates memory allocated by `LM_AssembleEx`.\n\n @param payload The memory to be freed that was allocated by `LM_AssembleEx`."]
    pub fn LM_FreePayload(payload: *mut lm_byte_t);
}
extern "C" {
    #[doc = " The function disassembles one instruction into an `lm_inst_t` struct.\n\n @param machine_code The address of the instruction to be disassembled.\n @param instruction_out The disassembled instruction is populated into this parameter.\n\n @return `LM_TRUE` on success, `LM_FALSE` on failure."]
    pub fn LM_Disassemble(machine_code: lm_address_t, instruction_out: *mut lm_inst_t)
        -> lm_bool_t;
}
extern "C" {
    #[doc = " The function disassembles instructions into an array of\n `lm_inst_t` structs.\n\n @param machine_code The address of the instructions to be disassembled.\n @param arch The architecture to be disassembled.\n @param bits The bitness of the architecture to be disassembled.\n It can be `32` or `64`.\n @param max_size The maximum number of bytes to disassemble (0 for as\n many as possible, limited by `instruction_count`).\n @param instruction_count The amount of instructions\n to disassemble (0 for as many as possible, limited by `max_size`).\n @param runtime_address The runtime address to resolve\n the addressing (for example, relative jumps will be resolved using this address).\n @param instructions_out A pointer to the buffer that will receive the disassembled instructions.\n The buffer should be freed with `LM_FreeInstructions` after use.\n\n @return On success, it returns the count of the instructions disassembled. On failure, it\n returns `0`."]
    pub fn LM_DisassembleEx(
        machine_code: lm_address_t,
        arch: lm_arch_t,
        bits: lm_size_t,
        max_size: lm_size_t,
        instruction_count: lm_size_t,
        runtime_address: lm_address_t,
        instructions_out: *mut *mut lm_inst_t,
    ) -> lm_size_t;
}
extern "C" {
    #[doc = " The function deallocates the memory allocated by `LM_DisassembleEx` for the disassembled instructions.\n\n @param instructions The disassembled instructions allocated by `LM_DisassembleEx`."]
    pub fn LM_FreeInstructions(instructions: *mut lm_inst_t);
}
extern "C" {
    #[doc = " The function calculates the size aligned to the instruction length, based on a minimum size.\n\n @param machine_code The address of the instructions.\n @param min_length The minimum size to be aligned to instruction length.\n\n @return On success, it returns the aligned size to the next instruction's length. On failure, it returns `0`."]
    pub fn LM_CodeLength(machine_code: lm_address_t, min_length: lm_size_t) -> lm_size_t;
}
extern "C" {
    #[doc = " The function calculates the size aligned to the instruction length, based on a minimum size, in a remote process.\n\n @param process The remote process to get the aligned length from.\n @param machine_code The address of the instructions in the remote process.\n @param min_length The minimum size to be aligned to instruction length.\n\n @return On success, it returns the aligned size to the next instruction's length. On failure, it returns `0`."]
    pub fn LM_CodeLengthEx(
        process: *const lm_process_t,
        machine_code: lm_address_t,
        min_length: lm_size_t,
    ) -> lm_size_t;
}
